--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
     "counter_settings": {
-        "pump_count": 0,
-        "pressurize_count": 884,
-        "depressurize_count": 909
+        "pump": 0,
+        "pressurize": 0,
+        "depressurize": 0
     },
     "timing_settings": {
         "pressurize_width": 1.0,
