--- a/settings.json
+++ b/settings.json
@@ -6,21 +6,21 @@
         "delay_width": 2.0
     },
     "counter_settings": {
-        "pump_count": 3,
-        "pressurize_count": 270,
-        "depressurize_count": 271
+        "pump_count": 0,
+        "pressurize_count": 13,
+        "depressurize_count": 13
     },
     "plotting_coefficients": {
-        "0": 0.0001651526430069147,
+        "0": 0.00015701946313308272,
         "1": 0.00015,
         "2": 0.00015,
         "3": 0.00015,
         "4": 0.00015,
-        "5": 0.00022131002502441408,
-        "6": 0.0002186305145147005,
+        "5": 0.00021041129395578411,
+        "6": 0.0002078637398020364,
         "8": 2.8,
         "9": 2.85
     },
     "tube_length": 100.0,
-    "theme": "Dark"
+    "theme": "System Default"
 }
