Gui size increase

--- a/settings.json
+++ b/settings.json
@@ -21,6 +21,5 @@
         "8": 2.8,
         "9": 2.85
     },
-    "tube_length": 100.0,
-    "theme": "System Default"
+    "tube_length": 100.0
 }
