--- a/settings.json
+++ b/settings.json
@@ -27,6 +27,6 @@
         "max_pressure_before_depress_increase": 0.1,
         "max_pump_rate_increase": 0.25,
         "example_events": 10,
-        "period_diffs_to_error": 3
+        "decrease_count_to_error": 3
     }
 }
