--- a/settings.json
+++ b/settings.json
@@ -26,7 +26,9 @@
         "max_pressure_before_depress_decrease": 0.1,
         "max_pressure_before_depress_increase": 0.01,
         "max_pump_rate_increase": 0.25,
-        "example_events": 10,
-        "decrease_count_to_error": 3
+        "pump_window": 2.0,
+        "max_pumps_in_window": 5,
+        "example_events": 2,
+        "decrease_count_to_error": 1
     }
 }
