--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,14 @@
 [tool.poetry]
 name = "icarus_v2"
-version = "0.1.0"
+version = "0.1.1"
 description = "Monitoring software for the Icarus Pressure Jump apparatus"
 authors = ["Sean Fitch <fitchs2@rpi.edu>"]
-license = "LICENSE.txt"
 readme = "README.md"
-homepage = "https://github.com/SeanIFitch/icarus_v2"
 repository = "https://github.com/SeanIFitch/icarus_v2"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
-    "Operating System :: OS Independent",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: Unix",
+    "Topic :: Scientific/Engineering",
 ]
 packages = [
     { include = "icarus_v2", from = "src" }
