Initial theme changing

--- a/src/icarus_v2/resources/default_settings.json
+++ b/src/icarus_v2/resources/default_settings.json
@@ -31,5 +31,5 @@
         "example_events": 10,
         "decrease_count_to_error": 2
     },
-    "theme": "System Default"
+    "theme": "dark"
 }
