Light theme & UI updates (#154)
Implement light theme and update UI elements.

New Features:

Added a light theme option, along with a theme setting.
Updated plot styling for better visibility and aesthetics.
Various bug fixes.

---------

Co-authored-by: gianlucazhang2 <zhanggianluca2@gmail.com>

--- a/src/icarus_v2/resources/default_settings.json
+++ b/src/icarus_v2/resources/default_settings.json
@@ -30,5 +30,6 @@
         "max_pumps_in_window": 5,
         "example_events": 10,
         "decrease_count_to_error": 2
-    }
+    },
+    "theme": "dark"
 }
